# J1939_gateway

./: .cproject  .project  CMakeLists.txt  README.md  mqtt_getlogs.py  mqtt_test.py  partitions.csv  sdkconfig  sdkconfig.old
Records/: J1939_PGN_table.csv
main/: CMakeLists.txt  Kconfig.projbuild  common.h  file_op.c  main.c  mqtt_pub.c  mqtt_sub.c  ota_op.c  twai.c  wifi_op.c
server_certs/: ca.crt  client.crt  client.key
